# tap-quickbase-json

./: .gitignore  LICENSE.txt  README.md  meltano.example.yml  mypy.ini  pyproject.toml  tox.ini
tap_quickbase_json/: __init__.py  client.py  streams.py  tap.py
tap_quickbase_json/tests/: __init__.py  test_core.py
