[tool.poetry]
name = "tap-quickbase-json"
version = "0.0.1"
description = "`tap-quickbase-json` is a Singer tap for quickbase-json, built with the Meltano SDK for Singer Taps."
authors = ["Sterling Paramore"]
keywords = [
    "ELT",
    "quickbase",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.4.9"
atomicwrites = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
requests-mock = "^1.9.3"

[tool.black]
line-length = 108

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_quickbase_json"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-quickbase-json = 'tap_quickbase_json.tap:TapQuickbaseJson.cli'
